# RallyHarnessEngineering

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-python-package.yml
.harness/: ARCHITECTURE.md
.harness/rules/: archive-rules.md  backlog-rules.md  handoff-rules.md  session-start.md  workflow-lifecycle.md
.harness/schemas/: backlog-consumption-event.schema.json  project-entrypoints.schema.json  tasks.schema.json  workflow-state.schema.json
.harness/scripts/: archive-plan.py  backlog-consume.py  check-project-env.py  commit-task.py  complete-workflow.py  harness  init-project-entrypoint.py  lifecycle-transaction.py  lint-harness.py  materialize-tasks.py  session-start.py  state-write.py  test_lint_harness.py  test_session_start.py  update-task.py
.harness/templates/: closure.template.md  entrypoint-managed-block.template.md  handoff.template.md  plan.template.md  project-entrypoints.template.json  tasks.template.json
.harness/tests/: test_archive_plan.py  test_backlog_consume.py  test_check_project_env.py  test_commit_task.py  test_complete_workflow.py  test_handoff_rules.py  test_harness_cli.py  test_init_project_entrypoint.py  test_installer_boundary.py  test_lifecycle_transaction.py  test_lint_harness.py  test_materialize_tasks.py  test_session_start.py  (+11 more)
harness-design/: architecture.md  backlogs.schema.md  handoff.template.md  harness-engineering学习.md  harness学习问题汇总.md  plan-writing-skill-draft.md  workflow.md
installer/: install-lifecycle.md
learning-notes/: README.md  tasks-workflow-gates.md
work/: workflow-state.json
(+69 files in other folders)
