[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hally-harness-engineering"
version = "0.1.6"
description = "Installer CLI for Harness Engineering runtime assets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.18",
]
license = "MIT"
authors = [
  { name = "Harness Engineering Maintainers" },
]
keywords = ["agent", "workflow", "harness", "installer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
hally-harness-engineering = "harness_engineering_installer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harness_engineering_installer = [
  "assets-manifest.json",
  "payload/.harness/**/*",
  "payload/.harness/contracts/.gitkeep",
]
